profile model changed.. profile css fixing

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/editprofile.component.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/editprofile.component.css
@@ -19,3 +19,14 @@
     .progress-value {
         color: #f29200;
     }
+    .panel-heading{
+        position:relative;
+    }
+    .header-left{
+        position:absolute;
+        left:5px;
+    }
+    .header-right{
+        position:absolute;
+        right:5px;
+    }
