--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/editprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/editprofile.component.html
@@ -55,19 +55,22 @@
         <form>
             <div class="info-form">
                 <div class="panel panel-default">
-                    <div class="panel-heading">Panel Heading</div>
+                    <div class="panel-heading">
+                        <div class="header-left">Panel Heading</div>
+                        <div class="header-right">Required*</div>
+                    </div>
                     <div class="panel-body">
                         <router-outlet></router-outlet>
                         <!--<div class="row">
-                    <div class="col-md-6">
-                        <label for="email">Tag Line</label>
-                        <input type="text" class="form-control" id="email">
-                    </div>
-                    <div class="col-md-6">
-                        <label for="email">Tag Line</label>
-                        <input type="text" class="form-control" id="email">
-                    </div>
-                </div>-->
+                        <div class="col-md-6">
+                            <label for="email">Tag Line</label>
+                            <input type="text" class="form-control" id="email">
+                        </div>
+                        <div class="col-md-6">
+                            <label for="email">Tag Line</label>
+                            <input type="text" class="form-control" id="email">
+                        </div>
+                    </div>-->
                     </div>
                 </div>
                 <div class="submit-panel">
