--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/contact.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/contact.component.html
@@ -10,11 +10,11 @@
     <!-- ==================== -->
     <div class="form-group col-md-6">
         <label>PREFERED E-MAIL</label>
-        <input type="text" [(ngModel)]="contact.email" class="form-control profile-form">
+        <input type="email" placeholder="Enter your email" [(ngModel)]="contact.email" class="form-control profile-form">
     </div>
     <div class="col-md-6">
         <label>PHONE NUMBR</label>
-        <input type="text" [(ngModel)]="contact.phone" class="form-control profile-form">
+        <input type="tel" [(ngModel)]="contact.phone" class="form-control profile-form">
     </div>
     <!-- ==================== -->
     <div class="form-group col-md-6">
