--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/education.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/education.component.html
@@ -7,18 +7,18 @@
 <div class="row">
     <div class="form-group col-md-6">
         <label>INSTITUTE</label>
-        <input type="text" class="form-control profile-form">
+        <input [(ngModel)]="education.institute" type="text" class="form-control profile-form">
     </div>
     <!-- =============== -->
     <div class="form-group col-md-6">
         <label>TIME FRAME</label>
         <div class="row">
             <div class="col-md-5">
-                <input type="text" class="form-control profile-form">
+                <input [(ngModel)]="education.startDate" type="number" min="1900" max="2099" step="1" value="2016" placeholder="YEAR" class="form-control profile-form">
             </div>
             <label class="mid-label">TO</label>
             <div class="col-md-5">
-                <input type="text" class="form-control profile-form">
+                <input [(ngModel)]="education.endDate" type="number" min="1900" max="2099" step="1" value="2016" placeholder="YEAR" class="form-control profile-form">
             </div>
         </div>
 
@@ -26,18 +26,18 @@
     <div class="form-group col-md-6">
         <div class="row">
             <div class="col-md-6"><label class="mid-label">COMPLETED STUDIES</label></div>
-            <div class="col-md-2"><input type="checkbox" class="form-control profile-form" value=""></div>
+            <div class="col-md-2"><input [(ngModel)]="education.studyStatus" type="checkbox" class="form-control profile-form" value=""></div>
         </div>
         
     </div>
     <div class="form-group col-md-7"> </div>
     <div class="form-group col-md-6">
         <label>DESCRIPTION</label>
-        <textarea rows="3" maxlength="3" class="form-control profile-form"></textarea>
+        <textarea rows="3" maxlength="3" [(ngModel)]="education.description" class="form-control profile-form"></textarea>
     </div>
     <div class="form-group col-md-7"> </div>
     <div class="form-group col-md-6">
         <label>ESPECIALITY</label>
-        <input type="text" class="form-control profile-form">
+        <input type="text" [(ngModel)]="education.especiality" class="form-control profile-form">
     </div>
 </div>
