--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/experience.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/experience.component.html
@@ -3,52 +3,52 @@
         float: left;
         margin-top: 10px;
     }
+    .date-input{
+        width:24%;
+    }
 </style>
 <div class="row">
     <div class="form-group col-md-6">
         <label>EMPLOYER</label>
-        <input type="text" class="form-control profile-form">
+        <input [(ngModel)]="experience.employer" type="text" class="form-control profile-form">
     </div>
     <div class="form-group col-md-6">
         <label>POSITION HELD</label>
-        <input type="text" class="form-control profile-form">
+        <input [(ngModel)]="experience.positionHeld" type="text" class="form-control profile-form">
     </div>
     <div class="form-group col-md-6">
         <label>LOCATION</label>
-        <input type="text" class="form-control profile-form">
+        <input [(ngModel)]="experience.employerLocation" type="text" class="form-control profile-form">
     </div>
     <!-- =============== -->
     <div class="form-group col-md-12">
         <div class="row">
             <div class="col-md-6"><label class="mid-label">TIME PERIOD</label></div>
-            <div class="col-md-1"><input type="checkbox" class="form-control profile-form" value=""></div>
+            <div class="col-md-1"><input [(ngModel)]="experience.currentlyWorking" type="checkbox" class="form-control profile-form" value=""></div>
             <div class="col-md-5"><label class="mid-label">CURRENTLY WORK HERE</label></div>
         </div>
-
     </div>
     <div class="form-group col-md-12">
         <div class="row">
-            <div class="col-md-2">
-                <input type="text" placeholder="MONTH" class="form-control profile-form">
+            <div class="col-md-2 date-input">
+                <input [(ngModel)]="experience.startMonth" type="number" placeholder="MONTH" class="form-control profile-form">
             </div>
-            <div class="col-md-2">
-                <input type="text" placeholder="YEAR" class="form-control profile-form">
+            <div class="col-md-2 date-input">
+                <input [(ngModel)]="experience.startYear" type="number" min="1900" max="2099" step="1" value="2016" placeholder="YEAR" class="form-control profile-form">
             </div>
             <label class="mid-label">TO</label>
-            <div class="col-md-2">
-                <input type="text" placeholder="MONTH" class="form-control profile-form">
+            <div class="col-md-2 date-input">
+                <input [(ngModel)]="experience.endMonth" type="number" placeholder="MONTH" class="form-control profile-form">
             </div>
-            <div class="col-md-2">
-                <input type="text" placeholder="YEAR" class="form-control profile-form">
+            <div class="col-md-2 date-input">
+                <input [(ngModel)]="experience.endYear" type="number" min="1900" max="2099" step="1" value="2016" placeholder="YEAR" class="form-control profile-form">
             </div>
         </div>
-
     </div>
-
     <div class="form-group col-md-7"> </div>
     <div class="form-group col-md-6">
         <label>DESCRIPTION</label>
-        <textarea rows="3" maxlength="3" class="form-control profile-form"></textarea>
+        <textarea rows="3" maxlength="3" [(ngModel)]="experience.description" class="form-control profile-form"></textarea>
     </div>
     <div class="form-group col-md-7"> </div>
 </div>
