--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/insight.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/insight.component.html
@@ -3,50 +3,52 @@
         float: left;
         margin-top: 10px;
     }
+    .text-panel{
+    margin-top: 7px;
+}
 </style>
 <div class="row">
     <div class="form-group col-md-6">
         <label>TITLE</label>
-        <input type="text" class="form-control profile-form">
+        <input [(ngModel)]="insight.title" type="text" class="form-control profile-form">
     </div>
     <div class="form-group col-md-6">
         <label>PUBLICATION</label>
-        <input type="text" class="form-control profile-form">
+        <input [(ngModel)]="insight.publication" type="text" class="form-control profile-form">
     </div>
     <!-- =============== -->
     <div class="form-group col-md-6">
         <label>DATE</label>
-        <div class="row">
+        <div class="row form-group">
             <div class="col-md-5">
-                <input type="text" class="form-control profile-form">
+                <input [(ngModel)]="insight.dateMonth" type="number" placeholder="MONTH" class="form-control profile-form">
             </div>
 
             <div class="col-md-5">
-                <input type="text" class="form-control profile-form">
+                <input [(ngModel)]="insight.dateYear" type="number" min="1900" max="2099" step="1" value="2016" placeholder="YEAR" class="form-control profile-form">
             </div>
         </div>
-        <div class="row">
+        <div class="row form-group">
             <div class="col-md-5">
                 <label class="radio-inline">
-                    <input type="radio" name="optradio">HYPERLINK
+                    <input [(ngModel)]="insight.isHyperLink" type="radio" name="optradio">HYPERLINK
+                </label>
             </div>
 
-            <div class="col-md-5">
+            <div class="col-md-7">
                 <label class="radio-inline">
-                    <input type="radio" name="optradio">UPLOAD DOCUMENT
+                    <input [(ngModel)]="insight.isDocument" type="radio" name="optradio">UPLOAD DOCUMENT
                 </label>
             </div>
         </div>
-        <div class="row">
+        <div class="row form-group">
             <div class="col-md-12">
-                <input type="text" class="form-control profile-form">
+                <input [(ngModel)]="insight.documentLink" type="text" class="form-control profile-form">
             </div>
         </div>
     </div>
-    <div class="form-group col-md-6">
-        <div class="row">
-            <label>DESCRIPTION</label>
-            <textarea rows="5" maxlength="3" class="form-control profile-form"></textarea>
-        </div>
+    <div class="form-group col-md-6 text-panel">
+        <label>DESCRIPTION</label>
+        <textarea [(ngModel)]="insight.description" rows="5" maxlength="3" class="form-control profile-form"></textarea>
     </div>
 </div>
