--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/skills.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/skills.component.html
@@ -1,4 +1,7 @@
 ﻿<style>
+    .profile-form{
+        text-align:center;
+    }
     .skil-points {
         background-color: #ededed;
         padding: 5px;
@@ -11,7 +14,7 @@
         margin-top: 10px;
     }
 
-    .point-cointeiner {
+    .point-container {
         margin: 0 5px;
     }
 
@@ -20,7 +23,7 @@
         height: 30px;
         border-radius: 0;
         border: none;
-    background-color: #efb153;
+        background-color: #efb153;
     }
 
     .done-btn {
@@ -32,7 +35,7 @@
 </style>
 <div class="row">
     <div class="row">
-        <div class="point-cointeiner">
+        <div class="point-container">
             <div class="col-md-4 ">
                 <div class="skil-points">quality mamangement</div>
             </div>
@@ -49,7 +52,7 @@
     </div>
 
     <div class="col-md-6 col-lg-offset-3 button-container">
-        <button class="btn btn-default add-btn">ADD SKILLS</button>
+        <input type="text" [(ngModel)]="contact.lastName" placeholder="ADD SKILLS" class="form-control profile-form">
         <button class="btn btn-default done-btn">DONE</button>
     </div>
 </div>
