Profile css fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/editprofile.component.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/editprofile.component.css
@@ -22,11 +22,6 @@
     .panel-heading{
         position:relative;
     }
-    .header-left{
-        position:absolute;
-        left:5px;
-    }
-    .header-right{
-        position:absolute;
-        right:5px;
+    .heading{
+        display:inline;
     }
