--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/biography.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/biography.component.html
@@ -5,7 +5,7 @@
     </div>
     <!-- =============== -->
     <div class="col-md-7">
-        <label>ABOUT ME</label>
+        <label>ABOUT ME*</label>
         <textarea [(ngModel)]="biography.aboutMe" rows="3" maxlength="3" class="form-control profile-form"></textarea>
     </div>
 </div>
