--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/experience.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/experience.component.html
@@ -9,23 +9,23 @@
 </style>
 <div class="row">
     <div class="form-group col-md-6">
-        <label>EMPLOYER</label>
+        <label>EMPLOYER*</label>
         <input [(ngModel)]="experience.employer" type="text" class="form-control profile-form">
     </div>
     <div class="form-group col-md-6">
-        <label>POSITION HELD</label>
+        <label>POSITION HELD*</label>
         <input [(ngModel)]="experience.positionHeld" type="text" class="form-control profile-form">
     </div>
     <div class="form-group col-md-6">
-        <label>LOCATION</label>
+        <label>LOCATION*</label>
         <input [(ngModel)]="experience.employerLocation" type="text" class="form-control profile-form">
     </div>
     <!-- =============== -->
     <div class="form-group col-md-12">
         <div class="row">
-            <div class="col-md-6"><label class="mid-label">TIME PERIOD</label></div>
+            <div class="col-md-6"><label class="mid-label">TIME PERIOD*</label></div>
             <div class="col-md-1"><input [(ngModel)]="experience.currentlyWorking" type="checkbox" class="form-control profile-form" value=""></div>
-            <div class="col-md-5"><label class="mid-label">CURRENTLY WORK HERE</label></div>
+            <div class="col-md-5"><label class="mid-label">CURRENTLY WORK HERE*</label></div>
         </div>
     </div>
     <div class="form-group col-md-12">
