--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/contact.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/contact.component.html
@@ -1,15 +1,15 @@
 ﻿<div class="row" >
     <div class="form-group col-md-6">
-        <label>FIRST NAME</label>
+        <label>FIRST NAME*</label>
         <input type="text" [(ngModel)]="contact.firstName" class="form-control profile-form" >
     </div>
     <div class="col-md-6">
-        <label>LAST NAME</label>
+        <label>LAST NAME*</label>
         <input type="text" [(ngModel)]="contact.lastName" class="form-control profile-form">
     </div>
     <!-- ==================== -->
     <div class="form-group col-md-6">
-        <label>PREFERED E-MAIL</label>
+        <label>PREFERED E-MAIL*</label>
         <input type="email" placeholder="Enter your email" [(ngModel)]="contact.email" class="form-control profile-form">
     </div>
     <div class="col-md-6">
@@ -18,7 +18,7 @@
     </div>
     <!-- ==================== -->
     <div class="form-group col-md-6">
-        <label>ADDRESS LINE 1</label>
+        <label>ADDRESS LINE 1*</label>
         <input type="text" [(ngModel)]="contact.address1" class="form-control profile-form">
     </div>
     <div class="col-md-6">
@@ -27,16 +27,16 @@
     </div>
     <!-- ==================== -->
     <div class="form-group col-md-6">
-        <label>COUNTRY</label>
+        <label>COUNTRY*</label>
         <input type="text" [(ngModel)]="contact.country" class="form-control profile-form">
     </div>
     <div class="col-md-6">
-        <label>REGION</label>
+        <label>REGION*</label>
         <input type="text" [(ngModel)]="contact.region" class="form-control profile-form">
     </div>
     <!-- ==================== -->
     <div class="form-group col-md-6">
-        <label>CITY</label>
+        <label>CITY*</label>
         <input type="text" [(ngModel)]="contact.city" class="form-control profile-form">
     </div>
 </div>
