--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/education.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/education.component.html
@@ -6,12 +6,12 @@
 </style>
 <div class="row">
     <div class="form-group col-md-6">
-        <label>INSTITUTE</label>
+        <label>INSTITUTE/UNIVERSITY*</label>
         <input [(ngModel)]="education.institute" type="text" class="form-control profile-form">
     </div>
     <!-- =============== -->
     <div class="form-group col-md-6">
-        <label>TIME FRAME</label>
+        <label>TIME FRAME*</label>
         <div class="row">
             <div class="col-md-5">
                 <input [(ngModel)]="education.startDate" type="number" min="1900" max="2099" step="1" value="2016" placeholder="YEAR" class="form-control profile-form">
@@ -25,14 +25,14 @@
     </div>
     <div class="form-group col-md-6">
         <div class="row">
-            <div class="col-md-6"><label class="mid-label">COMPLETED STUDIES</label></div>
+            <div class="col-md-6"><label class="mid-label">COMPLETED STUDIES*</label></div>
             <div class="col-md-2"><input [(ngModel)]="education.studyStatus" type="checkbox" class="form-control profile-form" value=""></div>
         </div>
         
     </div>
     <div class="form-group col-md-7"> </div>
     <div class="form-group col-md-6">
-        <label>DESCRIPTION</label>
+        <label>DESCRIPTION*</label>
         <textarea rows="3" maxlength="3" [(ngModel)]="education.description" class="form-control profile-form"></textarea>
     </div>
     <div class="form-group col-md-7"> </div>
