z-index shhem added

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
@@ -12,7 +12,7 @@
 @import "site/forms.less";
 @import "site/search.less";
 @import "site/contextmenu.less";
-
+@import "site/z-index-schem";
 /*General shared*/
 .right-border{
     border-right:1px solid;
