--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/home.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/home.component.html
@@ -1,14 +1,13 @@
 ﻿<style>
     .banner-container {
         position: relative;
-        z-index: 99;
     }
     .fixed-top {
         position: fixed;
         top: 0;
     }    
 </style>
-<div class="banner-container">
+<div class="banner-container banner">
     <ap-banner></ap-banner>
     <ap-nav></ap-nav>
     <ap-search placeBottom="bottom-float"></ap-search>
