question home :search panel top fix

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/home.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/home.component.html
@@ -7,7 +7,7 @@
         top: 0;
     }    
 </style>
-<div class="banner-container banner">
+<div class="banner-container z-banner">
     <ap-banner></ap-banner>
     <ap-nav></ap-nav>
     <ap-search placeBottom="bottom-float"></ap-search>
