--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-home.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-home.component.html
@@ -23,8 +23,7 @@
 </style>
 <div class="row  body-padding">
     <apq-nav></apq-nav>
-    <h2>iAsk question about business</h2>
-    <ap-search placeBottom="" ></ap-search>
+    <ap-search placeBottom="top-fixed" ></ap-search>
     
     <div class="col-md-3">
         <question-left-menu></question-left-menu>
