--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
@@ -57,7 +57,11 @@ a {
     left: 20%;
     overflow: visible;
 }
-
+.top-fixed {
+    position: fixed;
+    left: 20%;
+    top: 74px;
+}
 .fixed-height {
     height: 45px;
 }
