--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
@@ -38,12 +38,11 @@
                                     You must select a category for question
                                 </div>
                             </div>
-                            <div class="question-components">
-                                <textarea [(ngModel)]="body" [ngModelOptions]="{standalone: true}" rows="5" cols="84" ></textarea>
-                                <!--<ckeditor [(ngModel)]="body" [ngModelOptions]="{standalone: true}"
+                            <div class="question-components">                                
+                                <ckeditor [(ngModel)]="body" [ngModelOptions]="{standalone: true}"
                                           [config]="{ removeButtons : 'Outdent,Indent,About,SpecialChar,Styles,Format,Source,NumberedList,BulletedList,Scayt,Blockquote,Anchor,Table'}"
                                           debounce="500">
-                                </ckeditor>-->
+                                </ckeditor>
                             </div>
 
                         </div>
