--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
@@ -37,7 +37,7 @@
 <!-- =============== -->
 
 
-<div class="row">
+<div class="row z-ground">
     <div class="left-border">
         <img class="image-border" src="../../../../images/border.png" />
     </div>
