--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
@@ -1,7 +1,17 @@
-﻿<div [ngClass]="placeBottom">
+﻿<style>
+    .modal-container {
+        position: fixed;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        background-color: rgba(0, 0, 0, 0.3);
+    }
+</style>
+<div [ngClass]="placeBottom" class="z-header" id="search-box" >
     <div class="input-group" id="adv-search">
 
-        <form (ngSubmit)="submitQuestion()" #questionVM="ngForm" class="form-horizontal" role="form">
+        <form (ngSubmit)="submitQuestion()" #questionVM="ngForm" class="form-horizontal" role="form" id="search-panel">
 
             <div [hidden]="titleName.valid || titleName.pristine"
                  class="alert alert-danger">
@@ -17,9 +27,14 @@
                 <ul class="question-List">
                     <li *ngFor="let item of filteredQuestionList">
                         <a (click)="selectQuestionDetails(item)">{{item.title}}</a>
+                        <hr />
                     </li>
                     <li>
                         Topics: {{categoryMatched}}
+                        <hr />
+                    </li>
+                    <li>
+                        Search: {{categoryMatched}}
                     </li>
                 </ul>
             </div>
