--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
@@ -22,7 +22,7 @@
                         <hr />
                     </li>
                     <li>
-                        <a><span class="search-footer">Search:</span>  {{categoryMatched}}</a> 
+                        <a><span class="search-footer">Search:</span>  {{title?title+'?':''}}</a> 
                     </li>
                 </ul>
             </div>
