status panel added in home page

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
@@ -3,6 +3,7 @@
 @import "site/navs.less";
 @import "site/typography.less";
 @import "site/layout.less";
+@import "site/social-bar";
 @import "site/navbar.less";
 @import "site/navs.less";
 @import "site/dropdown.less";
@@ -14,6 +15,7 @@
 @import "site/contextmenu.less";
 @import "site/z-index-schem";
 /*General shared*/
+@import "site/image-border";
 .right-border{
     border-right:1px solid;
     color:white;
