--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-left-menu/question-left-menu.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-left-menu/question-left-menu.component.html
@@ -1,9 +1,11 @@
 ﻿<div class="menu-container">
-    <div  class="row">
-        <div >
-            <div class="question-title">Related Topics</div>
+    <div class="row">
+        <div>
+            <div class="question-title"><h3>Category</h3></div>
+            <img src="../../../../images/border-horizontal.png" />
             <div class="question-list">
                 <a [routerLink]="['/question/home',category.id]" *ngFor="let category of categories"> {{category.name}}</a>
+                
             </div>
         </div>
     </div>
