--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
@@ -5,13 +5,13 @@
 
             <input type="text" class="form-control search-input fixed-height" #searchText placeholder="Ask here" id="title" autocomplete="off"
                    [(ngModel)]="title" required name="titleName" #titleName="ngModel" (keyup)=filterQuestions() />
-            <div [hidden]="titleName.valid || titleName.pristine"
+            <!--<div [hidden]="titleName.valid || titleName.pristine"
                  class="alert alert-danger">
                 Please type your question and then click ask!!
-            </div>
+            </div>-->
             
-
-            <div class="suggestions" *ngIf="(filteredQuestionList.length > 0) || (this.categoryMatched.length > 0)">
+            <!--&& (this.categoryMatched.length > 0)-->
+            <div class="suggestions" *ngIf="(filteredQuestionList.length > 0) ">
                 <ul class="question-List">
                     <li *ngFor="let item of filteredQuestionList">
                         <a (click)="selectQuestionDetails(item)">{{item.title}}</a>
