--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.css
@@ -1,4 +1,8 @@
-﻿.details-container{
+﻿.panel-article [class*="questions-container"] {
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+.details-container{
     margin-left:5px;
 }
 .arrow_box {
@@ -66,7 +70,6 @@ p {
     margin-right: 8%;
     margin-top: 20px;
     margin-bottom: 20px;
-    max-height: 194px;
 }
 
 .article-footer {
