--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_Layout.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <script src="~/libs/zone.js/dist/zone.js"></script>
     <script src="~/libs/reflect-metadata/Reflect.js"></script>
     <script src="~/libs/systemjs/dist/system.src.js"></script>
-    <script src="https://cdn.ckeditor.com/4.5.11/standard/ckeditor.js"></script>
+    <script src="https://cdn.ckeditor.com/4.6.1/standard-all/ckeditor.js"></script>
 
     <!-- 2. Configure SystemJS -->
     <script src="~/js/systemjs.config.js"></script>
