Question home CSS fixed Search panel width fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/typography.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/typography.less
@@ -25,11 +25,13 @@ a{
     text-decoration: none;
     outline: 0;
     cursor:pointer;
+    color:black;
 }
-a:hover{
+a:hover,a:focus{
+    outline:none;
     text-decoration:none;
+    color:#F6912B;
 }
-
 .text-danger {
     color: #c00;
     font-weight: 700;
