--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/banner/carousel.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/banner/carousel.css
@@ -5,7 +5,7 @@
 .indicator{
     margin-left:3px;
 }
-.indicator:active{
+.indicator:focus{
     background-color:white;
 }
 .fixed-height {     /*for scrol top*/
