--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-left-menu/question-left-menu.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-left-menu/question-left-menu.component.html
@@ -1,20 +1,11 @@
 ﻿<div class="menu-container">
     <div class="row">
         <div>
-            <div class="question-title"><h3>Category</h3></div>
+            <div class="question-title"><h3>Categories</h3></div>
             <img src="../../../../images/border-horizontal.png" />
-            <div class="question-list">
-                <a [routerLink]="['/question/home',category.id]" *ngFor="let category of categories"> {{category.name}}</a>
-                
-            </div>
+            <ul class="category-list">
+                <li *ngFor="let category of categories"><a [routerLink]="['/question/home',category.id]" > {{category.name}}</a></li>
+            </ul>
         </div>
     </div>
-    <!--<div class="row">
-        <div >
-            <div class="question-title">Related Content</div>
-            <div class="question-list">
-                <p *ngFor="let question of questionMenuList">&iquest;{{question.questiontext}}?</p>
-            </div>
-        </div>
-    </div>-->
 </div>
