--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
@@ -1,4 +1,7 @@
-﻿.modal-container {
+﻿.input-group-btn{
+    width: auto;
+}
+.modal-container {
         position: fixed;
         top: 0;
         left: 0;
@@ -89,7 +92,7 @@ a {
 
 .search-input {
     background-color: #f5f5f5;
-    width: 80%;
+    width: 88%;
 }
 
 .form-control {
@@ -142,7 +145,7 @@ a {
 
 @media screen and (min-width: 768px) {
     #adv-search {
-        width: 850px;
+        width: 840px;
         margin: 0 auto;
     }
 
